Bug 163032 - Some split cells may not paint their content on following pages
Summary: Some split cells may not paint their content on following pages
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:25.2.0 target:24.8.3 target:24...
Keywords: bisected, regression
Depends on:
Blocks: Writer-Tables
  Show dependency treegraph
 
Reported: 2024-09-18 17:25 UTC by Mike Kaganski
Modified: 2024-10-07 12:09 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-09-18 17:25:28 UTC
Open attachment 183889 [details] in current master (or 24.8.1). Go to page 28, containing the first part of a table (Table14). Look at row with "10" in column A (rows 38 and 39 are shown on page 28, rows 40 and 41 on page 29; A38 spans over 4 rows). In fact, A38 contains an empty paragraph and the "10" in the second paragraph.

Put cursor, e.g., to B35 (a cell to the right of the "9" in column A). Press Enter, so that the cell has two rows of text, and the expectation is, that row 39 moves to the next page, together with A38's "10" paragraph. Note that the temporary freeze is an unrelated problem, handled in bug 152298.

Since commit 13495926390ba54fbcd45ec00fbe613b1f2b734b, the "10" is invisible on page 29; but it's there, at the bottom of A38, selectable using mouse, and copyable to clipboard.
Comment 1 m_a_riosv 2024-09-18 21:03:20 UTC
Reproducible
Version: 24.8.1.2 (X86_64) / LibreOffice Community
Build ID: 87fa9aec1a63e70835390b81c40bb8993f1d4ff6
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 Commit Notification 2024-10-02 19:28:01 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d5fcc8ea25e416a4d2bea5e0f92c0e403997d845

tdf#163032 sw: fix painting of row frame with rowspan > 1 cell

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl 2024-10-02 19:29:41 UTC
fixed on master
Comment 4 Commit Notification 2024-10-07 12:09:48 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/0db0469dbbab0bb235482100ee007e92dd88ae77

tdf#163032 sw: fix painting of row frame with rowspan > 1 cell

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-10-07 12:09:52 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/18500b7e265de4ecdb0b2c7d38548cb85f4ffb7d

tdf#163032 sw: fix painting of row frame with rowspan > 1 cell

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.