tdf#163032 sw: fix painting of row frame with rowspan > 1 cell

Super non intuitive representation of a rowspan > 1 cell split across
pages is that the follow frame will be in a row that's 0 height, but its
own height extends to the bottom of the following merged rows.

(regression from commit 13495926390ba54fbcd45ec00fbe613b1f2b734b)

Change-Id: I0e32477613ceb5b6dbcc590bf70e0b5fc62a5d0a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174399
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit d5fcc8ea25e416a4d2bea5e0f92c0e403997d845)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174336
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>